--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "module": "dist/source/index.js",
   "types": "dist/source/index.d.ts",
   "bin": {
-    "backAWSLambda": "script/back.sh"
+    "backAWSLambda": "script/back.sh",
+    "backBuild": "script/backBuild.mjs"
   },
   "files": [
     "dist"
@@ -55,7 +56,8 @@
     "backapirest": "latest",
     "journaly": "latest",
     "aws-lambda": "latest",
-    "thread-promises": "latest"
+    "thread-promises": "latest",
+    "hjson": "latest"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
