--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@backapirest/aws-lambda",
   "productName": "backAPIRestAWSLambda",
   "author": "Judah Holanda Correia Lima <judahholanda7@gmail.com> (https://judahh.com)",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": false,
   "description": "A simple API framework using Flexible Persistence",
   "main": "dist/source/index.js",
   "module": "dist/source/index.js",
   "types": "dist/source/index.d.ts",
   "bin": {
-    "backAWSLambda": "script/back.sh",
+    "backAWSLambda": "script/backAWS.sh",
     "backBuild": "script/backBuild.mjs"
   },
   "files": [
